--- a/Wav2Lip-GFPGAN-new.ipynb
+++ b/Wav2Lip-GFPGAN-new.ipynb
@@ -29,8 +29,8 @@
    "metadata": {
     "id": "YhFe3CJGAIiV",
     "ExecuteTime": {
-     "end_time": "2023-04-25T02:37:42.839007793Z",
-     "start_time": "2023-04-25T02:37:42.835886655Z"
+     "end_time": "2023-04-25T05:45:31.227839978Z",
+     "start_time": "2023-04-25T05:45:31.227483157Z"
     }
    },
    "execution_count": 1,
@@ -46,23 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import os\n"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-04-25T05:44:43.272667922Z",
+     "start_time": "2023-04-25T05:44:43.271878807Z"
+    }
    }
   },
   {
@@ -81,6 +75,13 @@
    },
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
